--- a/devweek/src/main/resources/application.properties
+++ b/devweek/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/dbcancerdemama
-spring.datasource.username=java
-spring.datasource.password=Passw123!@
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/dbcancerdemama
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
